--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production",
-    "dev": "webpack serve --open --mode=development",
+    "start": "webpack serve --open --mode=development",
     "lint": "eslint ."
   },
   "keywords": [],
